# open_manipulator_gazebo

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: open_manipulator_x_controller_sim.yaml
launch/: open_manipulator_x.launch.py
urdf/: open_manipulator_x.urdf.xacro
worlds/: empty.world
