<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_gazebo</name>
  <version>0.0.0</version>
  <description>ROS2 gazbeo simulation for open manipulator arm</description>
  <maintainer email="sudhirpratapyadav@gmail.com">Sudhir Pratap Yadav</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>open_manipulator_x_description</exec_depend>

	<test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
